@@ -1,3 +1,9 @@
+2003-10-30  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.1)
+
+        * IO/Cluster.pm: Added read support for new style character
+          quality flags. Cluster files are still written using the
+          old style numeric flags.
+          
 2003-10-17  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.0)
 
         * IO/VOTable.pm: Very simple VOTable reader added, should
